--- a/resume/res-stadler.tex
+++ b/resume/res-stadler.tex
@@ -44,30 +44,32 @@ Concentration in Computer Vision and Computer Graphics
 Computer vision, computer graphics, crowd simulation, crowd behavior, artificial intelligence, path finding, autonomous agent navigation,  activity recognition, RGB-D, motion analysis.
  
 \section{Research Experience}
- {\bf Graduate Research,} UOIT, Oshawa, ON \hfill Sept 2012-Present
+ {\bf Graduate Research,} UOIT, Oshawa, ON \hfill Sept 2012 - Present
  \begin{itemize} \itemsep -2pt  % reduce space between items
- \item Focus on Computer Vision and Computer Graphics
- \item Current Work - Computer Vision fed Data-Driven Simulation
+ \item My graduate research focuses on computer vision fed data-driven simulations.  This is current work which is actively being pursued.
+ \item (C++, Unity, RVO2, OpenCV, Python, MATLAB)
  \end{itemize}
 
-{\bf Undergraduate Summer Research}, UOIT, Oshawa, ON \hfill Summer 2012
+{\bf Undergraduate Summer Research}, UOIT, Oshawa, ON \hfill April 2012 - Sept 2012
 \begin{itemize} \itemsep -2pt
-\item Lift based acticity recognition and analysis with Microsoft Kinect
+\item Using Microsoft Kinect and OpenNI I developed a lift based activity recognition and analysis system for the purpose of a serious game.  This was supervised by both Computer Science and Game Development faculty. 
+\item (C++, OpenNI, PCL, libSVM, Weka)
 \end{itemize}
 
-{\bf Undergraduate Thesis}, UOIT, Oshawa, ON \hfill Sept 2011 - May 2012
+{\bf Undergraduate Thesis}, UOIT, Oshawa, ON \hfill Sept 2011 - April 2012
 \begin{itemize} \itemsep -2pt
-\item Developed an interactive panoramic image stitching application
+\item For my undergraduate thesis I developed an interactive panoramic image stitching application which incorporated dynamic elements.  This project had a heavy focus on computer vision and robust algorithms.
+\item (C++, OpenCV, SURF, RANSAC)
 \end{itemize}
 
 \section{Teaching Experience} 
-               {\bf Guest Lecturer,} UOIT, Oshawa, ON    \hfill         2013-2014 
+               {\bf Guest Lecturer,} UOIT, Oshawa, ON
                 \begin{itemize} \itemsep -2pt
-              \item Simulation and Modeling, CSCI 3010U
-              \item  Computer Architecture, CSCI 2050U
+              \item Simulation and Modeling, CSCI 3010U \hfill Oct 2013
+              \item  Computer Architecture, CSCI 2050U \hfill Jan 2014
               \end{itemize}
 
-	 {\bf Teaching Assistant,} UOIT, Oshawa, ON \hfill   2012-2014
+	 {\bf Teaching Assistant,} UOIT, Oshawa, ON \hfill   Sept 2012 - Present
             \begin{itemize} \itemsep -2pt
             \item  Simulation and Modeling, CSCI 3010U   
             \item Programming Workshop, CSCI 1060U
@@ -96,14 +98,14 @@ Computer vision, computer graphics, crowd simulation, crowd behavior, artificial
 	\item Cash-out customers
 	\end{itemize}
 
-	{\bf Technician, Customer Service,} Staples Business Depot, Alliston, ON \hfill Feb 2006 - Sept 2009
+	{\bf Technician, Customer Service,} Staples, Alliston, ON \hfill Feb 2006 - Sept 2009
 	\begin{itemize} \itemsep -2pt
 	\item Providing technican service and assitance with customer computers
 	\item Assisting customers within the store
 	\item Cash handling and cashing out customers
 	\end{itemize}
 
-	{\bf Production Associate,} Honda of Canada Mfg., Alliston, ON, \hfill Mar 2008 - Sept 2008
+	{\bf Production Associate,} Honda of Canada Mfg., Alliston, ON \hfill Mar 2008 - Sept 2008
 	\begin{itemize} \itemsep -2pt
 	\item Working on a team in a fast paced environment to ensure parts meet a specified quality level and ensruing distribution can be achieved.
 	\end{itemize}
@@ -112,8 +114,8 @@ Computer vision, computer graphics, crowd simulation, crowd behavior, artificial
 % Tabulate Computer Skills; p{3in} defines paragraph 3 inches wide
 \section{Computer \\ Skills}
    \begin{tabular}{l p{3in}}
-    \underline{Languages:} & C/C++, GLSL, Python, Java, BASH,  Javascript, HTML/CSS, LaTeX\\
-    \underline{Libraries:} & OpenGL, RVO2, OpenCV, OpenNI, libSVM\\
+    \underline{Languages:} & C/C++ (7 years), GLSL(2 years), Python(4 years), Java (9 years), BASH (5 years),  Javascript (2 years), HTML/CSS (10 years), LaTeX (5 years)\\
+    \underline{Libraries:} & OpenGL, RVO2, OpenCV, OpenNI, libSVM, PCL\\
     \underline{Software:} & Visual Studio, Unity, Eclipse, Weka \\
  \end{tabular}
 
