resume filled to 2 pages

--- a/resume/res-stadler.tex
+++ b/resume/res-stadler.tex
@@ -20,25 +20,39 @@
 \begin{resume} 
  
 \section{Objective} 
-Hard working and enthusiatic M.Sc candidate seeking to obtain industry experience in a position where I can apply my diverse set of skills and abilities to real world problem solving.
+Hard working and enthusiastic M.Sc candidate seeking to obtain industry experience in a position where I can apply my diverse set of skills and abilities to real world problem solving.
 
 \section{Highlights of Qualifications}
 \begin{itemize} \itemsep -2pt
-\item M.Sc candidate in computer science and graduate of computing science from the University of Ontario Institute of Technolgoy
+\item M.Sc candidate in computer science and graduate of computing science from the University of Ontario Institute of Technology
 \item Strong academic focus in computer graphics, computer vision, and algorithms
 \item Excellent problem solving and analysis skills
-\item Proven ability to work on a team; strong independant working skills
+\item Proven ability to work on a team; strong independent working skills
 \item Excellent written and oral communication
 \end{itemize}
 
 \section{Education} 
 {\bf M.Sc. in Computer Science,} University of Ontario Institute of Technology, \\
 Oshawa, ON, Canada, Currently Enrolled \\
-Concentration in Computer Vision based Data-Driven Crowd Simulations
+Concentration in Computer Vision based Data-Driven Crowd Simulations \\ \\
+Relevant courses:
+\begin{itemize} \itemsep -2pt
+\item Computer Graphics, CSCI 5510U
+\item Advanced Topics in Digital Media, CSCI 6520U
+\end{itemize}
 
 {\bf B.Sc. in Computing Science,} University of Ontario Institute of Technology, \\
 Oshawa, ON, Canada, May 2012 \\
-Concentration in Computer Vision and Computer Graphics
+Comprehensive program with undergraduate thesis \\ \\
+Relevant courses:
+\begin{itemize} \itemsep -2pt
+\item Advanced Computer Graphics, CSCI 4100U
+\item Scientific Visualization and Computer Graphics, CSCI 3090U
+\item Simulation and Modeling, CSCI 3010U
+\item Artificial Intelligence, CSCI 4610U
+\item Analysis and Design of Algorithms, CSCI 3070U
+\end{itemize}
+
 
 \section{Research\\ Interests}
 Computer vision, computer graphics, crowd simulation, crowd behavior, artificial intelligence, path finding, autonomous agent navigation,  activity recognition, RGB-D, motion analysis.
@@ -47,18 +61,21 @@ Computer vision, computer graphics, crowd simulation, crowd behavior, artificial
  {\bf Graduate Research,} UOIT, Oshawa, ON \hfill Sept 2012 - Present
  \begin{itemize} \itemsep -2pt  % reduce space between items
  \item My graduate research focuses on computer vision fed data-driven simulations.  This is current work which is actively being pursued.
+\item Research performed as a member of UOIT's VCLab under the supervision of Dr. Faisal Qureshi
  \item (C++, Unity, RVO2, OpenCV, Python, MATLAB)
  \end{itemize}
 
 {\bf Undergraduate Summer Research}, UOIT, Oshawa, ON \hfill April 2012 - Sept 2012
 \begin{itemize} \itemsep -2pt
-\item Using Microsoft Kinect and OpenNI I developed a lift based activity recognition and analysis system for the purpose of a serious game.  This was supervised by both Computer Science and Game Development faculty. 
+\item Using Microsoft Kinect and OpenNI I developed a lift based activity recognition and analysis system for the purpose of a serious game.
+\item Joint project between UOITs VCLab and GAMER Lab supervised by Dr. Faisal Qureshi and Dr. Andrew Hogue
 \item (C++, OpenNI, PCL, libSVM, Weka)
 \end{itemize}
 
 {\bf Undergraduate Thesis}, UOIT, Oshawa, ON \hfill Sept 2011 - April 2012
 \begin{itemize} \itemsep -2pt
 \item For my undergraduate thesis I developed an interactive panoramic image stitching application which incorporated dynamic elements.  This project had a heavy focus on computer vision and robust algorithms.
+\item Supervised by Dr. Faisal Qureshi
 \item (C++, OpenCV, SURF, RANSAC)
 \end{itemize}
 
@@ -81,9 +98,6 @@ Computer vision, computer graphics, crowd simulation, crowd behavior, artificial
 \section{Awards and Recognition}
 	{\bf Dean's List,} B.Sc Computing Science, 2009
 
-\section{Key Courses}
-	Do this????
-
 \section{Work Experince}
 	{\bf Production Worker,} Flex-N-Gate Seaburn, Tottenham, ON \hfill May 2011 - Sept 2011
 	\begin{itemize} \itemsep -2pt
@@ -94,21 +108,24 @@ Computer vision, computer graphics, crowd simulation, crowd behavior, artificial
 	{\bf Customer Service,} LCBO, Cookstown, ON \hfill May 2010 - Sept 2010
 	\begin{itemize} \itemsep -2pt
 	\item Provide customers with assistance and recommendations with purchases
-	\item Organisation and display of product
+	\item Organization and display of product
 	\item Cash-out customers
 	\end{itemize}
 
 	{\bf Technician, Customer Service,} Staples, Alliston, ON \hfill Feb 2006 - Sept 2009
 	\begin{itemize} \itemsep -2pt
-	\item Providing technican service and assitance with customer computers
+	\item Providing technician service and assistance with customer computers
 	\item Assisting customers within the store
 	\item Cash handling and cashing out customers
 	\end{itemize}
 
 	{\bf Production Associate,} Honda of Canada Mfg., Alliston, ON \hfill Mar 2008 - Sept 2008
 	\begin{itemize} \itemsep -2pt
-	\item Working on a team in a fast paced environment to ensure parts meet a specified quality level and ensruing distribution can be achieved.
+	\item Working on a team in a fast paced environment to ensure parts meet a specified quality level and ensuring distribution can be achieved.
 	\end{itemize}
+
+\section{Additional Experience}
+	Website maintainer for VCLab website \hfill Sept 2012 - Present\\
  
 
 % Tabulate Computer Skills; p{3in} defines paragraph 3 inches wide
@@ -116,7 +133,8 @@ Computer vision, computer graphics, crowd simulation, crowd behavior, artificial
    \begin{tabular}{l p{3in}}
     \underline{Languages:} & C/C++ (7 years), GLSL(2 years), Python(4 years), Java (9 years), BASH (5 years),  Javascript (2 years), HTML/CSS (10 years), LaTeX (5 years)\\
     \underline{Libraries:} & OpenGL, RVO2, OpenCV, OpenNI, libSVM, PCL\\
-    \underline{Software:} & Visual Studio, Unity, Eclipse, Weka \\
+    \underline{IDEs:} & Visual Studio, Eclipse, Unity\\
+    \underline{Tools:} & Weka, Unix utilities \\
  \end{tabular}
 
 \section{References}
