--- a/cv/cv-stadler.tex
+++ b/cv/cv-stadler.tex
@@ -110,7 +110,7 @@
 \item \textbf{Undergraduate Summer Research}, University of Ontario Institute of Technology,  Summer 2012.  \\*
 	My undergraduate summer research involved activity recognition and analysis using Microsoft Kinect.
 \item \textbf{Undergraduate Thesis}, University of Ontario Institute of Technology, 2011-2012. \\*
-	I completed my undergraduate thesis project in the domain of computer vision.  I created an interactive panoramic image stitching application using web cams.
+	I completed my undergraduate thesis project in the domain of computer vision.  I created an interactive panoramic image stitching application using webcams.
 \end{itemize}
 
 
@@ -147,9 +147,10 @@
 
 \section*{Extracurricular and Volunteer Experience}
 \begin{itemize}
+\item Science Rendezvous at UOIT Volunteer, Computer Science, May 2014
 \item UOIT Open House Volunteer, Faculty of Science, Winter 2014
 \item UOIT Open House Volunteer, Faculty of Science, Fall 2013
-\item Science Rendezvous at UOIT Volunteer, Computer Science, March 2013
+\item Science Rendezvous at UOIT Volunteer, Computer Science, May 2013
 \item UOIT Open House Volunteer, Faculty of Science, Winter 2013
 \item UOIT Open House Volunteer, Faculty of Science, Fall 2012
 \item Presented to the Board of Governors, Presented research to UOIT board of governors, 2012.
@@ -164,7 +165,7 @@
 
 \section*{Interests and Hobbies}
 \begin{itemize}
-\item Running and obstacle based courses, fishing, reading, photography, Linux, tinkering.
+\item Running and obstacle based courses, reading, fishing, photography, Linux, tinkering.
 \item 
 \end{itemize}
 
