expanded the research experience section, added a skills section

--- a/cv/cv-stadler.tex
+++ b/cv/cv-stadler.tex
@@ -100,17 +100,30 @@
 
 \section*{Research Interests}
 \begin{itemize}
-\item Computer vision, computer graphics, activity recognition, crowd simulation, crowd behavior, artificial intelligence, path finding, autonomous agent navigation, RGB-D, motion analysis.
+\item Computer vision, computer graphics, activity recognition, crowd simulation, 
+crowd behavior, artificial intelligence, path finding and autonomous agent 
+navigation, smart cameras, embedded vision, RGB-D, motion analysis.
 \end{itemize}
 
 \section*{Research Experience}
 \begin{itemize}
-\item \textbf{Graduate Research}, University of Ontario Institute of Technology, 2012-Present. \\*
-	My graduate research is in computer vision and computer graphics.  Specifically regarding computer vision fed data driven crowd simulations.
-\item \textbf{Undergraduate Summer Research}, University of Ontario Institute of Technology,  Summer 2012.  \\*
-	My undergraduate summer research involved activity recognition and analysis using Microsoft Kinect.
-\item \textbf{Undergraduate Thesis}, University of Ontario Institute of Technology, 2011-2012. \\*
-	I completed my undergraduate thesis project in the domain of computer vision.  I created an interactive panoramic image stitching application using webcams.
+\item \textbf{Graduate Research}, University of Ontario Institute of Technology, 2012-Present.
+  \begin{itemize}
+	  \item Graduate research completed with a focus in computer vision and computer graphics.  Graduate thesis work in the application of
+      optical flow based crowd analysis for data-driven virtual crowd synthesis and computer vision based crowd comparison.
+    \item Tools: C++, Python, MATLAB, OpenCV, RVO2, Unity 3D
+  \end{itemize}
+\item \textbf{Undergraduate Summer Research}, University of Ontario Institute of Technology,  Summer 2012.
+  \begin{itemize}
+	\item Undergraduate summer research involved activity recognition and analysis using Microsoft Kinect.  Common cause of retirement for Fire Fighters in lower back injuries.  Incorrect lifting encourages these types of injuries.  Using RGB-D streams provided by Kinect we
+  analyze users performing various lifts and provide feedback based on users actions.  The goal was to provide the back end for a serious game.  Joint project with Game Development in the Faculty of Business and IT. Funded by the Canadian Memorial Chiropractic College, Ontario Workplace and Insurance Board, and Toronto Fire Services.
+  \item Tools: C++, OpenNI, OpenCV, libSVM, Weka, PCL
+  \end{itemize}
+\item \textbf{Undergraduate Thesis}, University of Ontario Institute of Technology, 2011-2012.
+  \begin{itemize}
+	  \item Undergraduate thesis project with a focus in computer vision.  Created an interactive panoramic image stitching application for use with webcams. Users are able to use a variety of modes to accomplish a panoramic image stitch which is created live.
+    \item Tools: C++, OpenCV, Boost
+  \end{itemize}
 \end{itemize}
 
 
@@ -162,6 +175,15 @@
 \item Dean's List, 2009.
 \end{itemize}
 
+\section*{Skills}
+  \begin{itemize}
+    \item \textbf{Languages:} C/C++ (7 years), GLSL(3 years), Python(5 years), 
+    Java (9 years), BASH (5 years),  Javascript (2 years), HTML/CSS (10 years), 
+    LaTeX (5 years), MATLAB (3 years)
+    \item \textbf{Libraries:} OpenGL, RVO2, OpenCV, OpenNI, libSVM, PCL
+    \item \textbf{IDEs:}  Visual Studio, Eclipse, Unity
+    \item \textbf{Tools:}  Weka, Unix utilities
+  \end{itemize}
 
 \section*{Interests and Hobbies}
 \begin{itemize}
